refact/user - removing role in the post registerUser
